--- a/-- template/index.html
+++ b/-- template/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>hello!</h1>
     <i class="fa-thin fa-lemon"></i>
     <!-- Script -->
     <script src="script.js"></script>
